# gpu-object-tracking

./: .gitignore  CMakeLists.txt  LICENSE  README.md  convert.py  crop.py  math.cpp  math.py  mosse.py  mosse2.py  opencv_tracking.py  perf.cpp  remap.cpp  run.py  test.265
src/: CMakeLists.txt  main.cpp  math.cpp  math.h  mosse.cpp  mosse.h  perf.cpp  perf.h  remap.cpp  test.cpp  util.cpp  util.h
src/gpu/: host.cpp  math.cl  vkFFT.h
tmp/: draw.py  gen_yuv.py  math.py  rect.py
